<resources>
    <string name="app_name">Stavka</string>
    <string name="add_note">add note</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_content">Enter content</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
</resources>